// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<button
  className="cHzpQi"
  width="auto"
>
  Default Button
</button>
`;

exports[`Button with custom theme 1`] = `
<button
  className="kQnsXr"
  width="auto"
>
  Default Button
</button>
`;

exports[`Button with custom width 1`] = `
<button
  className="byvJtN"
  width="20rem"
>
  Default Button
</button>
`;

exports[`Button with full width 1`] = `
<button
  className="cPQaes"
  width="auto"
>
  Default Button
</button>
`;
